--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,74 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+@layer components {
+  .btn-primary {
+    @apply mt-1 py-2 px-4 bg-primary text-white font-semibold rounded-lg shadow-md hover:bg-primary-light hover:shadow-lg transition-all ease-in;
+  }
+  .btn-primary:disabled {
+    @apply shadow-none opacity-60 hover:bg-primary;
+  }
+}
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+  font-family: "Poppins", sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+span.codeBlock span.filename {
+  @apply bg-slate-800 w-auto inline-block text-slate-200 px-6 py-1 text-sm rounded-r-lg rounded-tl-lg;
+}
+
+span.codeBlock code {
+  @apply bg-slate-800 rounded-r-lg rounded-bl-lg px-4 py-8 block text-white font-normal outline-slate-200 outline-1 outline;
+}
+
+span.codeBlock {
+  @apply rounded-lg bg-slate-700 block;
+}
+
+code::after,
+code::before {
+  content: "" !important;
+}
+
+input,
+textarea {
+  @apply block w-full px-3 py-2 bg-gray-200 rounded-md placeholder-slate-400
+  focus:outline-none focus:border-b-primary focus:border-b-2;
+}
+
+.form-control {
+  @apply mb-2;
+}
+
+div.error {
+  @apply text-sm bg-pink-500 px-4 py-1 inline-block mt-1 rounded-md text-white;
+}
+
+textarea {
+  @apply h-44;
+}
+
+input.invalid,
+textarea.invalid {
+  @apply text-pink-500 border-b-2 border-pink-300 focus:border-pink-500;
+}
+
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -24,4 +91,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
